--- a/css/main.css
+++ b/css/main.css
@@ -16,11 +16,11 @@
     z-index: 1;
     width: 300px;
     height: 100%;
-    -webkit-transform: translate3d(-300px,46px,0);
-    -moz-transform: translate3d(-300px,46px,0);
-    -o-transform: translate3d(-300px,46px,0);
-    -ms-transform: translate3d(-300px,46px,0);
-    transform: translate3d(-300px,46px,0);      
+    -webkit-transform: translate3d(-300px,0,0);
+    -moz-transform: translate3d(-300px,0,0);
+    -o-transform: translate3d(-300px,0,0);
+    -ms-transform: translate3d(-300px,0,0);
+    transform: translate3d(-300px,0,0);      
     -webkit-transition: all 0.3s linear;
     -moz-transition: all 0.3s linear;
     -ms-transition: all 0.3s linear;
@@ -29,11 +29,11 @@
 }
 
 .show-menu {
-    -webkit-transform: translate3d(0,46px,0);
-    -moz-transform: translate3d(0,46px,0);
-    -o-transform: translate3d(0,46px,0);
-    -ms-transform: translate3d(0,46px,0);
-    transform: translate3d(0,46px,0);
+    -webkit-transform: translate3d(0,0,0);
+    -moz-transform: translate3d(0,0,0);
+    -o-transform: translate3d(0,0,0);
+    -ms-transform: translate3d(0,0,0);
+    transform: translate3d(0,0,0);
     -webkit-transition: all 0.3s linear;
     -moz-transition: all 0.3s linear;
     -ms-transition: all 0.3s linear;
