--- a/css/main.css
+++ b/css/main.css
@@ -44,6 +44,10 @@ header .nav .nav-item a:hover {
     background-color: blue;
 }
 
-.carousel-indicators li{
+.carousel-indicators li {
     background-color: gray;
+}
+
+.item-nav-head {
+    width: 100%;
 }
