--- a/css/main.css
+++ b/css/main.css
@@ -17,7 +17,7 @@ header .nav .nav-item a:hover {
 .logo {
     color     : #fff;
     padding   : 5px 0px 5px 15px;
-    background: #0062cc;
+    background: #343a40;;
     height    : 34px;
 }
 
