--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
 body {
     background: #f3f3f3;
 }
+
 header {
     background-color: #343a40;
     box-shadow      : rgba(0, 0, 0, 0.2) 0 2px 6px 0;
@@ -17,8 +18,9 @@ header .nav .nav-item a:hover {
 .logo {
     color     : #fff;
     padding   : 5px 0px 5px 15px;
-    background: #343a40;;
-    height    : 34px;
+    background: #343a40;
+    ;
+    height: 34px;
 }
 
 .left-nav-item {
@@ -54,43 +56,154 @@ header .nav .nav-item a:hover {
 .item-nav-head {
     width: 100%;
 }
+
 .card {
-    padding: 3px;
-    margin: 5px;
-    border: 1px solid #dae0e5;
+    padding   : 3px;
+    margin    : 5px;
+    border    : 1px solid #dae0e5;
     min-height: 415px;
 }
-.col_white_amrc { color:#FFF;}
-footer { width:100%; background-color:#263238; min-height:250px; padding:10px 0px 25px 0px ;}
-.pt2 { padding-top:40px ; margin-bottom:20px ;}
-footer p { font-size:13px; color:#CCC; padding-bottom:0px; margin-bottom:8px;}
-.mb10 { padding-bottom:15px ;}
-.footer_ul_amrc { margin:0px ; list-style-type:none ; font-size:14px; padding:0px 0px 10px 0px ; }
-.footer_ul_amrc li {padding:0px 0px 5px 0px;}
-.footer_ul_amrc li a{ color:#CCC;}
-.footer_ul_amrc li a:hover{ color:#fff; text-decoration:none;}
-.fleft { float:left;}
-.padding-right { padding-right:10px; }
 
-.footer_ul2_amrc {margin:0px; list-style-type:none; padding:0px;}
-.footer_ul2_amrc li p { display:table; }
-.footer_ul2_amrc li a:hover { text-decoration:none;}
-.footer_ul2_amrc li i { margin-top:5px;}
-
-.bottom_border { border-bottom:1px solid #323f45; padding-bottom:20px;}
-.foote_bottom_ul_amrc {
-	list-style-type:none;
-	padding:0px;
-	display:table;
-	margin-top: 10px;
-	margin-right: auto;
-	margin-bottom: 10px;
-	margin-left: auto;
+.col_white_amrc {
+    color: #FFF;
 }
-.foote_bottom_ul_amrc li { display:inline;}
-.foote_bottom_ul_amrc li a { color:#999; margin:0 12px;}
 
-.social_footer_ul { display:table; margin:15px auto 0 auto; list-style-type:none;  }
-.social_footer_ul li { padding-left:20px; padding-top:10px; float:left; }
-.social_footer_ul li a { color:#CCC; border:1px solid #CCC; padding:8px;border-radius:50%;}
-.social_footer_ul li i {  width:20px; height:20px; text-align:center;}  
+footer {
+    width           : 100%;
+    background-color: #263238;
+    min-height      : 250px;
+    padding         : 10px 0px 25px 0px;
+}
+
+.pt2 {
+    padding-top  : 40px;
+    margin-bottom: 20px;
+}
+
+footer p {
+    font-size     : 13px;
+    color         : #CCC;
+    padding-bottom: 0px;
+    margin-bottom : 8px;
+}
+
+.mb10 {
+    padding-bottom: 15px;
+}
+
+.footer_ul_amrc {
+    margin         : 0px;
+    list-style-type: none;
+    font-size      : 14px;
+    padding        : 0px 0px 10px 0px;
+}
+
+.footer_ul_amrc li {
+    padding: 0px 0px 5px 0px;
+}
+
+.footer_ul_amrc li a {
+    color: #CCC;
+}
+
+.footer_ul_amrc li a:hover {
+    color          : #fff;
+    text-decoration: none;
+}
+
+.fleft {
+    float: left;
+}
+
+.padding-right {
+    padding-right: 10px;
+}
+
+.footer_ul2_amrc {
+    margin         : 0px;
+    list-style-type: none;
+    padding        : 0px;
+}
+
+.footer_ul2_amrc li p {
+    display: table;
+}
+
+.footer_ul2_amrc li a:hover {
+    text-decoration: none;
+}
+
+.footer_ul2_amrc li i {
+    margin-top: 5px;
+}
+
+.bottom_border {
+    border-bottom : 1px solid #323f45;
+    padding-bottom: 20px;
+}
+
+.foote_bottom_ul_amrc {
+    list-style-type: none;
+    padding        : 0px;
+    display        : table;
+    margin-top     : 10px;
+    margin-right   : auto;
+    margin-bottom  : 10px;
+    margin-left    : auto;
+}
+
+.foote_bottom_ul_amrc li {
+    display: inline;
+}
+
+.foote_bottom_ul_amrc li a {
+    color : #999;
+    margin: 0 12px;
+}
+
+.social_footer_ul {
+    display        : table;
+    margin         : 15px auto 0 auto;
+    list-style-type: none;
+}
+
+.social_footer_ul li {
+    padding-left: 20px;
+    padding-top : 10px;
+    float       : left;
+}
+
+.social_footer_ul li a {
+    color        : #CCC;
+    border       : 1px solid #CCC;
+    padding      : 8px;
+    border-radius: 50%;
+}
+
+.social_footer_ul li i {
+    width     : 20px;
+    height    : 20px;
+    text-align: center;
+}
+
+.fa,
+.fab,
+.fas {
+    font-size: 115px;
+}
+
+.maintable {
+    width: 100%;
+}
+
+.maintable tbody tr td {
+    text-align      : center;
+    height          : 300px;
+    background-color: rgba(0, 123, 255, .25);
+    margin-bottom   : 15px;
+}
+
+.maintable tbody tr td:hover {
+    color           : white;
+    background-color: gray;
+}
